--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "devDependencies": {
     "@now/node": "^1.2.0",
-    "@types/axios": "^0.14.0"
+    "@types/axios": "^0.14.0",
+    "@types/string-pixel-width": "^1.7.0"
   },
   "dependencies": {
-    "axios": "^0.19.2"
+    "axios": "^0.19.2",
+    "string-pixel-width": "^1.10.0"
   }
 }
